# music-library-indexer

./: CMakeLists.txt  README.md  main.cpp
docs/: _config.yml  guidelines.md  how_to_use.md  index.md  installation.md  json_output_format.md  supported_file_formats.md  supported_id3_frames.md
docs/_includes/: header.html
include/: aiff_reader.h  aiff_reader.hpp  commands.h  commands.hpp  id3_parser.h  id3_parser.hpp  library_scanner.h  library_scanner.hpp  options.h  options.hpp  program_info.hpp
include/nlohmann/: json.hpp
include/util/: base64.h  base64.hpp  helpers.h  helpers.hpp
music/: 01 Breaky beat.aiff  02 Breakbeat 1.aiff  20260424_mli_snapshot.json  20260429_mli_snapshot.json
music/test1/: short song.aif
music/test1/test2/: song2.aiff
src/: aiff_reader.cpp  commands.cpp  id3_parser.cpp  library_scanner.cpp  program_info.cpp
